--- a/src/app/home.component.html
+++ b/src/app/home.component.html
@@ -5,11 +5,9 @@
       <h1>Hallo</h1>
       <h2>Ex maiores officia et <b>necessitatibus</b> accusantium</h2>
       <p>
-        At expedita quibusdam qui aspernatur quidem eos debitis adipisci et
-        repudiandae nostrum. Aut harum corrupti qui adipisci molestiae cum fugit
-        fuga 33 sint repellat? Ut aliquam officiis eos eligendi facere ut
-        quaerat culpa? Et omnis dolores et eaque enim non quod vero 33 illo esse
-        At illum nihil.
+        At expedita quibusdam qui aspernatur quidem eos debitis adipisci et repudiandae nostrum. Aut harum corrupti qui
+        adipisci molestiae cum fugit fuga 33 sint repellat? Ut aliquam officiis eos eligendi facere ut quaerat culpa? Et
+        omnis dolores et eaque enim non quod vero 33 illo esse At illum nihil.
       </p>
     </div>
   </div>
