--- a/src/app/home.component.html
+++ b/src/app/home.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="columns">
-    <div class="column col-8 col-mx-auto">
+    <div class="column col-8 col-sm-10 col-mx-auto">
       <img src="assets/avatar-nick-nijland.png" alt="Nick Nijland" />
       <h1>Hallo</h1>
       <h2>Ex maiores officia et <b>necessitatibus</b> accusantium</h2>
@@ -9,6 +9,7 @@
         adipisci molestiae cum fugit fuga 33 sint repellat? Ut aliquam officiis eos eligendi facere ut quaerat culpa? Et
         omnis dolores et eaque enim non quod vero 33 illo esse At illum nihil.
       </p>
+      <a target="_blank" href="https://www.linkedin.com/in/nick-nijland-a5665a62/" class="btn btn-lg">Mijn LinkedIn</a>
     </div>
   </div>
 </div>
