--- a/src/app/home.component.html
+++ b/src/app/home.component.html
@@ -3,7 +3,7 @@
     <div class="column col-8 col-sm-10 col-mx-auto">
       <img src="assets/avatar-nick-nijland.png" alt="Nick Nijland" />
       <h1>Hallo</h1>
-      <h2>Ex maiores officia et <b>necessitatibus</b> accusantium</h2>
+      <h2>Ex maiores officia et <b>Jenkins</b> accusantium</h2>
       <p>
         At expedita quibusdam qui aspernatur quidem eos debitis adipisci et repudiandae nostrum. Aut harum corrupti qui
         adipisci molestiae cum fugit fuga 33 sint repellat? Ut aliquam officiis eos eligendi facere ut quaerat culpa? Et
